--- a/StudentInfoSystem/StudentInfoSystem.csproj
+++ b/StudentInfoSystem/StudentInfoSystem.csproj
@@ -103,5 +103,8 @@
       <Name>UserLogin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\default.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
